# delve

./: Cargo.toml  Justfile  README.md
crates/gfx/: Cargo.toml
crates/gfx/src/: buffer.rs  error.rs  frame.rs  lib.rs  material.rs  render_pass.rs  render_pipeline.rs  screen.rs
data/: core.kdl  textures.aseprite
docs/: book.toml
docs/src/: SUMMARY.md  day0001.md  day0002.md  day0003.md  dev_diary.md  overview.md
src/: gfx.rs  main.rs  shader.wgsl
src/gfx/: material.rs  mod.rs  render_pass.rs  render_pipeline.rs  screen.rs
src/resources/: database.rs  loader.rs  mod.rs
