[package]
name = "delve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
winit = "0.28"
wgpu = "0.15"
raw-window-handle = "0.5"
thiserror = "1.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
wgpu_macros = "0.1.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
