[package]
name = "delve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx = { path = "crates/gfx" }
bytemuck = { version = "1.13", features = ["derive"] }
color-eyre = "0.6"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgpu = "0.15"
wgpu_macros = "0.1"
winit = "0.28"
knuffel = "3.2.0"
image = "0.24.6"
