[package]
name = "gfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13", features = ["derive"] }
raw-window-handle = "0.5"
thiserror = "1.0"
tracing = "0.1"
wgpu = "0.15"
